# magrslib

./: .gitignore  BUGFIX_VISUALIZATION.md  Cargo.toml  QUICKSTART_VISUALIZATION.md  VISUALIZATION.md  test_data.py  test_viz.py  visualize_3d.py  visualize_bfield.py  visualize_xz.py
examples/: simple_cuboid.rs  test_ellip_convention.rs  visualize_3d.rs  visualize_circle.rs  visualize_cuboid.rs  visualize_cuboid_xz.rs  visualize_mixed_sources.rs  visualize_pwm_inductor.rs  visualize_solenoid.rs
output_pwm_inductor/: time_series.csv
src/: export.rs  lib.rs  types.rs  utils.rs
src/export/: mod.rs  visualization.rs  vtk.rs
src/fields/: mod.rs  transforms.rs
src/fields/currents/: circle.rs  mod.rs  polyline.rs
src/fields/magnets/: cuboid.rs  mod.rs  sphere.rs
src/sources/: current_functions.rs  currents.rs  dipole.rs  magnets.rs  mod.rs
src/special/: elliptic.rs  mod.rs  standard_elliptic.rs
