[package]
name = "magrslib"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vtkio = "0.6"
ellip = "0.5.6"
rayon = "1.11.0"

[dev-dependencies]
approx = "0.5"
